--- a/index.html
+++ b/index.html
@@ -4,34 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="container">
+    <div class="form-row">
+      DD
 
-  Day
-  DD
+      Month
+      MM
 
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
+      Year
+      YYYY
+    </div>
+    <div class="divider-row">
+      <hr class="divider-line">
+      <svg style="background-color: black;" class="divider-icon" xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
+    </div>
+    <div class="time-row">
+      <p class="paragraph"><span id="years-number">--</span> years</p>
+      <p class="paragraph"><span id="months-number">--</span> months</p>
+      <p class="paragraph"><span id="days-number">--</span> days</p>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://michal-pawlak.netlify.app">Your Name Here</a>.
   </div>
 </body>
 </html>
