create app logic in script file

--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
         <div class="form-group">
           <label for="day" class="form__label">Day</label>
           <input class="form__input" type="text" id="day" placeholder="DD" required>
+          <p class="error-message">Invalid</p>
         </div>
         <div class="form-group">
           <label for="month" class="form__label">Month</label>
           <input class="form__input" type="text" id="month" placeholder="MM" required>
+          <p class="error-message">Invalid</p>
         </div>
         <div class="form-group">
           <label for="year" class="form__label">Year</label>
           <input class="form__input" type="text" id="year" placeholder="YYYY" required>
+          <p class="error-message">Invalid</p>
         </div>
       </form>
     </div>
     <div class="divider-row">
       <hr class="divider-line">
-      <svg class="divider-icon" xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
+      <svg class="divider-icon" id="form-button" xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
     </div>
     <div class="time-row">
       <p class="paragraph"><span class="number" id="years-number">- -</span>years</p>
