start handling wrong inputs

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <form action="#" class="form">
         <div class="form-group">
           <label for="day" class="form__label">Day</label>
-          <input class="form__input" type="text" id="day" placeholder="DD" required>
+          <input class="form__input" type="number" id="day" placeholder="DD" max="31" min="00" required autofocus>
           <p class="error-message">Invalid</p>
         </div>
         <div class="form-group">
           <label for="month" class="form__label">Month</label>
-          <input class="form__input" type="text" id="month" placeholder="MM" required>
+          <input class="form__input" type="number" id="month" placeholder="MM" required>
           <p class="error-message">Invalid</p>
         </div>
         <div class="form-group">
           <label for="year" class="form__label">Year</label>
-          <input class="form__input" type="text" id="year" placeholder="YYYY" required>
+          <input class="form__input" type="number" id="year" placeholder="YYYY" required>
           <p class="error-message">Invalid</p>
         </div>
       </form>
