--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Frontend Mentor | Age calculator app</title>
+  <title>A neat, responsive solution with good error handling</title>
   <script src="script.js" defer></script>
 </head>
 <body>
