--- a/index.html
+++ b/index.html
@@ -1,48 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>A neat, responsive solution with good error handling</title>
-  <script src="script.js" defer></script>
-</head>
-<body>
-  <div class="container">
-    <div class="form-row">
-      <form action="#" class="form">
-        <div class="form-group">
-          <label for="day" class="form__label" id="label__day">Day</label>
-          <input class="form__input" type="number" id="day" placeholder="DD" max="31" min="01" required autofocus>
-          <p class="error-message" id="error-day">.</p>
-        </div>
-        <div class="form-group">
-          <label for="month" class="form__label" id="label__month">Month</label>
-          <input class="form__input" type="number" id="month" max="12" min="01" placeholder="MM" required>
-          <p class="error-message" id="error-month">.</p>
-        </div>
-        <div class="form-group">
-          <label for="year" class="form__label" id="label__year">Year</label>
-          <input class="form__input" type="number" id="year" placeholder="YYYY" required>
-          <p class="error-message" id="error-year">.</p>
-        </div>
-      </form>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>A neat, responsive solution with good error handling</title>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="form-row">
+        <form action="#" class="form">
+          <div class="form-group">
+            <label for="day" class="form__label" id="label__day">Day</label>
+            <input
+              class="form__input"
+              type="number"
+              id="day"
+              placeholder="DD"
+              max="31"
+              min="01"
+              required
+              autofocus
+            />
+            <p class="error-message" id="error-day">.</p>
+          </div>
+          <div class="form-group">
+            <label for="month" class="form__label" id="label__month"
+              >Month</label
+            >
+            <input
+              class="form__input"
+              type="number"
+              id="month"
+              max="12"
+              min="01"
+              placeholder="MM"
+              required
+            />
+            <p class="error-message" id="error-month">.</p>
+          </div>
+          <div class="form-group">
+            <label for="year" class="form__label" id="label__year">Year</label>
+            <input
+              class="form__input"
+              type="number"
+              id="year"
+              placeholder="YYYY"
+              required
+            />
+            <p class="error-message" id="error-year">.</p>
+          </div>
+        </form>
+      </div>
+      <div class="divider-row">
+        <hr class="divider-line" />
+        <svg
+          class="divider-icon"
+          id="form-button"
+          xmlns="http://www.w3.org/2000/svg"
+          width="46"
+          height="44"
+          viewBox="0 0 46 44"
+        >
+          <g fill="none" stroke="#FFF" stroke-width="2">
+            <path
+              d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"
+            />
+          </g>
+        </svg>
+      </div>
+      <div class="time-row">
+        <p class="paragraph">
+          <span class="number" id="years-number">- -</span
+          ><span id="years-word">years</span>
+        </p>
+        <p class="paragraph">
+          <span class="number" id="months-number">- -</span
+          ><span id="months-word">months</span>
+        </p>
+        <p class="paragraph">
+          <span class="number" id="days-number">- -</span
+          ><span id="days-word">days</span>
+        </p>
+      </div>
     </div>
-    <div class="divider-row">
-      <hr class="divider-line">
-      <svg class="divider-icon" id="form-button" xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://michal-pawlak.netlify.app">Michał Pawlak</a>.
     </div>
-    <div class="time-row">
-      <p class="paragraph"><span class="number" id="years-number">- -</span>years</p>
-      <p class="paragraph"><span class="number" id="months-number">- -</span>months</p>
-      <p class="paragraph"><span class="number" id="days-number">- -</span>days</p>
-    </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://michal-pawlak.netlify.app">Michał Pawlak</a>.
-  </div>
-</body>
+  </body>
 </html>
