Page title change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <title>A neat, responsive solution with good error handling</title>
+    <title>Age Calculator</title>
     <script src="script.js" defer></script>
   </head>
   <body>
